# hwsystem-next

./: .gitmodules  Cargo.toml  Refactor.md  build.rs  config.development.toml  config.example.toml  config.production.toml  config.toml
docs/: API.md  DATABASE.md  REQUIREMENTS.md  SECURITY.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250123_000001_create_tables.rs  m20250126_000001_create_system_settings.rs
src/: errors.rs  lib.rs  main.rs
src/cache/: register.rs
src/cache/object_cache/: moka.rs  redis.rs
src/config/: impl.rs  mod.rs  structs.rs
src/entity/: class_users.rs  classes.rs  files.rs  grades.rs  homeworks.rs  mod.rs  prelude.rs  submissions.rs  system_settings.rs  system_settings_audit.rs  users.rs
src/middlewares/: rate_limit.rs  require_class_role.rs  require_jwt.rs  require_role.rs
src/models/auth/: requests.rs  responses.rs
src/models/class_users/: entities.rs  requests.rs  responses.rs
src/models/classes/: entities.rs  requests.rs  responses.rs
src/models/common/: pagination.rs  response.rs
src/models/files/: entities.rs  responses.rs
src/models/homeworks/: entities.rs  mod.rs  requests.rs  responses.rs  stats_responses.rs
src/models/notifications/: responses.rs
src/models/submissions/: responses.rs
src/models/system/: entities.rs  requests.rs  responses.rs
src/models/users/: entities.rs  requests.rs  responses.rs
src/routes/: auth.rs  class_users.rs  classes.rs  files.rs  frontend.rs  homeworks.rs  mod.rs  submissions.rs  system.rs  users.rs
src/runtime/: mod.rs
src/runtime/lifetime/: shutdown.rs  startup.rs
src/services/: mod.rs
src/services/auth/: login.rs  logout.rs  mod.rs  profile.rs  register.rs  token.rs
src/services/class_users/: delete.rs  get.rs  join.rs  list.rs  mod.rs  update.rs
src/services/classes/: create.rs  delete.rs  export.rs  get.rs  list.rs  mod.rs  update.rs
src/services/files/: download.rs  mod.rs  upload.rs
src/services/grades/: list.rs
src/services/homeworks/: delete.rs  detail.rs  list.rs  list_all.rs  mod.rs  stats.rs  stats_export.rs
src/services/notifications/: count.rs
src/services/submissions/: delete.rs  detail.rs  grade.rs  history.rs  list.rs  mod.rs  summary.rs
src/services/system/: mod.rs  settings.rs  settings_cache.rs
src/services/users/: create.rs  delete.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  update.rs
src/services/websocket/: mod.rs
src/storage/: mod.rs
src/storage/sea_orm_storage/: class_users.rs  classes.rs  files.rs  grades.rs  homeworks.rs  mod.rs  notifications.rs  submissions.rs  system_settings.rs  users.rs
src/utils/: file_magic.rs  jwt.rs  mod.rs  password.rs  validate.rs
