[package]
name = "rust-hwsystem-next"
version = "0.0.1"
description = "A next-generation homework system based on Rust and Actix-web."
license = "MIT"
authors = ["AptS-1547 <apts-1547@esaps.net>", "Cg8-5712 <cg8.5712@gmail.com>"]
edition = "2024"

[workspace]
members = [".", "migration"]

[lib]
name = "rust_hwsystem_next"
path = "src/lib.rs"

[[bin]]
name = "rust-hwsystem-next"
path = "src/main.rs"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
actix-web = "4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2.3"
jsonwebtoken = "9.3.1"
num_cpus = "1.17.0"
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
rustls = "0.23.28"
redis = { version = "0.32.3", features = ["tokio-comp", "tokio-rustls-comp"] }
async-trait = "0.1.88"
once_cell = "1.21.3"
ctor = "0.4.2"
argon2 = "0.5"
futures-util = "0.3.31"
actix-cors = "0.7.1"
dashmap = "6.1.0"
moka = { version = "0.12.10", features = ["future"] }
actix-service = "2.0.3"
config = "0.15.12"
regex = "1.11.1"
actix-multipart = "0.7.2"
uuid = "1.17.0"
rand = "0.9.1"
human-panic = "2.0.3"
paste = "1.0"
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
rust-embed = "8.11.0"
ts-rs = { version = "11.1", features = ["chrono-impl", "serde-json-impl"] }
